assets/scss/ascii-press/_sidebar.scss
.sidebar {
  background-color: $sidebar-color;
  color: $sidebar-text-color;
  padding: 2rem 0.4rem;
  text-align: center;

  .container {
    padding-left: 1rem;
    padding-right: 1rem;
  }

  li {
    overflow: hidden;
  }

  a {
    color: $sidebar-link-color;
    border: none;

    // fixes rendering of inline svg used to avoid adblocked icons
    svg:not(:root).svg-inline--fa {
      overflow: visible;
    }

    .svg-inline--fa.fa-w-16 {
      width: 1em;
    }

    .svg-inline--fa.fa-w-18 {
      width: 1em;
    }

    .svg-inline--fa {
      display: inline-block;
      font-size: inherit;
      height: 1em;
      overflow: visible;
      vertical-align: -.125em;
    }

    .fa-icon {
      width: 1.5rem;
      padding-right: 0.5rem;
      float: left;
    }

    code {
      float: left;
      max-width: 85%;
      color: $sidebar-link-color;

      &:hover {
        color: $sidebar-link-hover-color;

        em {
          color: $sidebar-link-hover-color;
        }
      }

      &:focus {
        color: $sidebar-link-hover-color;
      }

      em {
        font-weight: bold;
        color: $sidebar-link-emphasis-color;
      }
    }

    &:hover, &:focus {
      color: $sidebar-link-hover-color;

      code, code em {
        color: $sidebar-link-hover-color;
      }
    }
  }

  .sidebar-about {
    text-align: center;
  }

  .author-image {
    display: block;
    margin-top: 4px;
  }

  .container.fixed-container {
    position: absolute;
    bottom: .3rem;
  }
}

.sidebar-nav {
  text-align: left;
  list-style: none;
  margin-bottom: 2rem;
  margin-top: 2rem;
  padding-left: 0;
}

.sidebar-nav-item {
  display: block;
  line-height: 1.75;

  .active {
    font-weight: bold;
  }
}

.site__title {
  font-size: $site__title-font-size;
  margin-bottom: 0.5rem;

  a:hover {
    border: none;
  }
}

.site__description {
  font-size: 1.285rem;
  font-weight: 300;
}

.social {
  text-align: center;
  font-size: 0.85em;

  a {
    padding: 0 2px;
    @include link-no-decoration();
  }
}

.img--circle {
  border-radius: 50%;
}

.img--headshot {
  height: 115px;
  width: 115px;
}

.img--caption {
  font-style: italic;
}

%small-center-text {
  font-size: $font-scale-dot7;
  line-height: 1.1rem;
  text-align: center;
}

.copyright {
  padding-top: 1rem;
  @extend %small-center-text;
}

.builtwith {
  padding-top: .2rem;
  @extend %small-center-text;
}

